--- a/index.html
+++ b/index.html
@@ -3,67 +3,80 @@
 <head>
     <meta charset="UTF-8">
     <title>Romantikstadt Steyr</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body id="top">
 
 <header>
     <h1>Willkommen in Steyr</h1>
-    <img src="bilder/logo.png" alt="Logo Stadt Steyr" class="logo">
+    <img src="logo steyr.png" alt="Logo Stadt Steyr" class="logo">
 </header>
 
 <nav>
-    <a href="#">Gastronomie</a> |
-    <a href="#">Unterkünfte</a> |
-    <a href="#">Advent in Steyr</a> |
-    <a href="#">Steyr Moments - Angebot</a>
+    <a href="https://www.steyr-nationalpark.at/orte/region/gastronomie-steyr.html">Gastronomie</a>
+    <a href="https://www.steyr-nationalpark.at/orte/region/unterkuenfte-steyr.html">Unterkünfte</a>
+    <a href="https://www.steyr-nationalpark.at/advent.html">Advent in Steyr</a>
+    <a href="https://www.steyr-nationalpark.at/orte/region/steyr-am-fluss-der-zeit/oesterreich-angebot/detail/7720/steyrer-augenblicke.html">Steyr Moments</a>
 </nav>
 
 <main>
 
-    <h2>Steyr am Nationalpark – natürlich romantisch!</h2>
+<h2>Steyr am Nationalpark – natürlich romantisch!</h2>
 
-    <p style="text-align: justify;">
-        Steyr am Nationalpark, reich an Kultur, Industrie, Natur und Architektur,
-        ist eine lebens- und liebenswerte Kleinstadt. Die 1000-jährige Stadt liegt
-        mitten in der Österreichischen Romantikstraße zwischen Salzburg und Wien
-        und ist ein wahres Schatzkästchen.
-    </p>
+<p>
+Steyr am Nationalpark, reich an Kultur, Industrie, Natur und Architektur ist eine lebens-
+und liebenswerte Kleinstadt. Die 1000-jährige Stadt liegt inmitten der Österreichischen
+Romantikstraße zwischen Salzburg und Wien und ist ein wahres Architekturjuwel.
+</p>
 
-    <!-- OBERE BILDERREIHE -->
-    <div class="bilderreihe">
-        <img src="bilder/oben1.jpg" height="170" alt="">
-        <img src="bilder/oben2.jpg" height="170" alt="">
-        <img src="bilder/oben3.jpg" height="170" alt="">
-    </div>
+<p>
+Am historischen Stadtplatz reihen sich Bürgerhäuser aus verschiedenen Stilepochen
+harmonisch aneinander. Malerisch ist der Zusammenfluss von Enns und Steyr unterhalb
+des Schlosses.
+</p>
 
-    <h2>In Steyr ist immer was los – entscheiden Sie sich für eine dieser Aktivitäten:</h2>
+<!-- Erste Bildreihe -->
+<div class="bilder">
+    <img src="stadtplatz.jpg" height="170" alt="Stadtplatz Steyr">
+    <img src="stadttor.jpg" height="170" alt="Stadttor">
+    <img src="zweifluesseestadt.jpg" height="170" alt="Zweiflüssestadt">
+</div>
 
-    <!-- AUFZÄHLUNG ZWISCHEN DEN BILDERREIHEN -->
-    <ul>
-        <li>Vom höchsten Turm in den tiefsten Keller</li>
-        <li>Historische Altstadt erleben</li>
-        <li>Segway-Touren durch Steyr</li>
-        <li>Ein Eldorado für Naturliebhaber</li>
-        <li>Advent in Steyr</li>
-    </ul>
+<h2>In Steyr ist immer was los – entscheiden Sie sich für eine dieser Aktivitäten:</h2>
 
-    <!-- UNTERE BILDERREIHE -->
-    <div class="bilderreihe">
-        <img src="bilder/unten1.jpg" height="185" alt="">
-        <img src="bilder/unten2.jpg" height="185" alt="">
-        <img src="bilder/unten3.jpg" height="185" alt="">
-    </div>
+<ul>
+    <li><strong>Vom höchsten Turm in den tiefsten Keller</strong><br>
+        Begleiten Sie die Steyrer Nachtwächter auf Zeitreise in die Vergangenheit.</li>
 
-    <p class="abschluss">
-        Es gibt viel zu entdecken bei uns, wir freuen uns auf Ihren Besuch!
-    </p>
+    <li><strong>Steyr erschweben</strong><br>
+        Der Sprung vom Mittelalter ins Hightech-Zeitalter gelingt lautlos auf dem Segway.</li>
+
+    <li><strong>Ein Eldorado für Naturliebhaber</strong><br>
+        In nur 30 Minuten erreicht man den Nationalpark Kalkalpen.</li>
+
+    <li><strong>Advent in Steyr</strong><br>
+        Steyr wird zur offiziellen Christkindlstadt Österreichs.</li>
+</ul>
+
+<!-- Zweite Bildreihe -->
+<div class="bilder">
+    <img src="nachtwaechter.jpg" height="185" alt="Nachtwächter">
+    <img src="panoramalift.jpg" height="185" alt="Panoramalift">
+    <img src="christkindl.jpg" height="185" alt="Christkindl">
+</div>
+
+<p class="abschluss">
+    Es gibt viel zu entdecken bei uns, wir freuen uns auf Ihren Besuch!
+</p>
 
 </main>
 
-<!-- PFEIL ZURÜCK NACH OBEN -->
-<a href="#top" class="back-to-top">⬆</a>
+<footer>
+    <a href="#top">
+        <img src="pfeil.png" alt="Nach oben" class="pfeil">
+    </a>
+</footer>
 
 </body>
 </html>
